--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Hardware Store</title>
 </head>
 <body>
     <header>
-        <!-- Image and text -->
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" href="#">
             <img src="media/logo.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
@@ -17,106 +16,188 @@
         </nav>
     </header>
     <main class="container-fluid p-0">
+        <!-- Banner de bienvenida-->
         <div class="bannerBienvenida">
             <h2>¡Bienvenido!</h2>
             <h4>Acá podras hacer el calculo de la compra de articulos</h4>
         </div>
+        <div class="container rounded my-3 infoContainer">
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <div class="infoItem">
+                        <img src="/media/shipping.svg" alt="">
+                        <div>
+                            <h4>Envío a domicilio</h4>
+                            <h5>Descripcion</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="infoItem">
+                        <img src="/media/shop.svg" alt="">
+                        <div>
+                            <h4>Retiro en sucursal</h4>
+                            <h5>Descripcion</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="infoItem">
+                        <img src="/media/package.svg" alt="">
+                        <div>
+                            <h4>Envío a convenir</h4>
+                            <h5>Descripcion</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+        </div>
+        <div class="container d-flex">
+            <h1 class="mx-auto">Nuestros productos</h1>
+        </div>
+        <!-- Cartas con productos-->
         <div class="container my-3">
-            <div class="row row-cols-1 row-cols-md-3">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 intel">
                         <img src="media/productos/procesadores/intel-i3-10th.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$14999</h5>
                             <h5 class="card-title">Intel i3 10100</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 intel">
                         <img src="media/productos/procesadores/intel-i5-10th.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$22999</h5>
                             <h5 class="card-title">Intel i3 10400</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 amd">
                         <img src="media/productos/procesadores/ryzen-5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$31999</h5>
                             <h5 class="card-title">AMD Ryzen 5 3600</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 amd">
                         <img src="media/productos/procesadores/ryzen-7.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$43999</h5>
                             <h5 class="card-title">AMD Ryzen 5 3700x</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 amd">
                         <img src="media/productos/mobos/amd-a320.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$8499</h5>
                             <h5 class="card-title">Msi A320m</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 amd">
                         <img src="media/productos/mobos/amd-x570.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$25399</h5>
                             <h5 class="card-title">Msi x570</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 intel">
                         <img src="media/productos/mobos/intel-h410.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$7999</h5>
                             <h5 class="card-title">Asus H410m-e</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100">
+                    <div class="card h-100 intel">
                         <img src="media/productos/mobos/intel-b460.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$14999</h5>
                             <h5 class="card-title">Gigabyte b460m</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card h-100 ambasMarcas">
+                        <img src="media/productos/gpus/rtx-2060.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="precio">$39999</h5>
+                            <h5 class="card-title">Gigabyte RTX 2060</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card h-100 ambasMarcas">
+                        <img src="media/productos/gpus/rtx-3080.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="precio">$125999</h5>
+                            <h5 class="card-title">Asus RTX 3080</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card h-100 ambasMarcas">
+                        <img src="media/productos/gpus/rx-5700-xt.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="precio">$99999</h5>
+                            <h5 class="card-title">Gigabyte RX5700 XT</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
               </div>
         </div>
+        <!-- Subtotal e importe final de la compra-->
+        <div class="container my-4 p-4 rounded resumenCompra">
+            <h3>Resumen de la compra</h3>
+            <p>*Aca iría una tabla con el precio y cantidad de cada producto*</p>
+            <p>Subtotal: 100000</p>
+            <p>Costo de envío: 500</p>
+            <p>Total: 100500</p>
+        </div>
     </main>
     <footer class="container-fluid p-0">
-        <h3>Este es mi footer</h3>
+        <h5>Este es mi footer</h5>
+        <h6>Copyright 2021 Facundo Jimenez</h6>
     </footer>
 </body>
 <!-- Js  mio-->
 <script src="js/script.js"></script>
 <!-- Js de bootstrap-->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<!-- 
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
--->
+
 
 </html>
