--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col-12 col-lg-4">
                     <div class="infoItem">
-                        <img src="/media/shipping.svg" alt="">
+                        <img src="media/shipping.svg" alt="">
                         <div>
                             <h4>Envío a domicilio</h4>
                             <h5>Descripcion</h5>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="infoItem">
-                        <img src="/media/shop.svg" alt="">
+                        <img src="media/shop.svg" alt="">
                         <div>
                             <h4>Retiro en sucursal</h4>
                             <h5>Descripcion</h5>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="infoItem">
-                        <img src="/media/package.svg" alt="">
+                        <img src="media/package.svg" alt="">
                         <div>
                             <h4>Envío a convenir</h4>
                             <h5>Descripcion</h5>
