--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h2>¡Bienvenido!</h2>
             <h4>Acá podras hacer el calculo de la compra de articulos</h4>
         </div>
-        <div class="container rounded my-3 infoContainer">
-            <div class="row">
+        <div class="container rounded formasEnvioContainer">
+            <div class="row my-3">
                 <div class="col-12 col-lg-4">
                     <div class="infoItem">
                         <img src="media/shipping.svg" alt="">
@@ -57,25 +57,33 @@
         </div>
         <!-- Cartas con productos-->
         <div class="container my-3">
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+            <div id="listadoProductos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
                 <div class="col mb-4">
-                    <div class="card h-100 intel">
+                    <div class="card h-100 intel producto">
                         <img src="media/productos/procesadores/intel-i3-10th.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$14999</h5>
                             <h5 class="card-title">Intel i3 10100</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Microprocesador de 4 núcleo y 8 hilos</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad1">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad1" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
                 </div>
                 <div class="col mb-4">
-                    <div class="card h-100 intel">
+                    <div class="card h-100 intel producto">
                         <img src="media/productos/procesadores/intel-i5-10th.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="precio">$22999</h5>
                             <h5 class="card-title">Intel i3 10400</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Microprocesador de 6 núcleo y 12 hilos</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad2">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad2" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -86,7 +94,11 @@
                         <div class="card-body">
                             <h5 class="precio">$31999</h5>
                             <h5 class="card-title">AMD Ryzen 5 3600</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text">Microprocesador de 6 núcleos y 12 hilos</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad3">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad3" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -97,7 +109,11 @@
                         <div class="card-body">
                             <h5 class="precio">$43999</h5>
                             <h5 class="card-title">AMD Ryzen 5 3700x</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text">Microprocesador de 8 núcleos y 16 hilos</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad4">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad4" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -108,7 +124,11 @@
                         <div class="card-body">
                             <h5 class="precio">$8499</h5>
                             <h5 class="card-title">Msi A320m</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">Motherboard compatible con los procesadores de AMD de 1era, 2da y 3ra generación</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad5">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad5" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -119,7 +139,11 @@
                         <div class="card-body">
                             <h5 class="precio">$25399</h5>
                             <h5 class="card-title">Msi x570</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">Motherboard compatible con los procesadores de AMD de 2da, 3ra y 4ta generación</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad6">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad6" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -130,7 +154,11 @@
                         <div class="card-body">
                             <h5 class="precio">$7999</h5>
                             <h5 class="card-title">Asus H410m-e</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">Motherboard compatible con los procesadores de Intel de 10va y 11va generación</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad7">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad7" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -141,7 +169,11 @@
                         <div class="card-body">
                             <h5 class="precio">$14999</h5>
                             <h5 class="card-title">Gigabyte b460m</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">Motherboard compatible con los procesadores de Intel de 10va y 11va generación</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad8">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad8" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -152,7 +184,11 @@
                         <div class="card-body">
                             <h5 class="precio">$39999</h5>
                             <h5 class="card-title">Gigabyte RTX 2060</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">Placa de video con 6GB de VRAM GDDR6</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad9">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad9" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -163,7 +199,11 @@
                         <div class="card-body">
                             <h5 class="precio">$125999</h5>
                             <h5 class="card-title">Asus RTX 3080</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">Placa de video con 12GB de VRAM GDDR6X</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad10">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad10" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -174,7 +214,11 @@
                         <div class="card-body">
                             <h5 class="precio">$99999</h5>
                             <h5 class="card-title">Gigabyte RX5700 XT</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                            <p class="card-text">Placa de video con 8GB de VRAM GDDR6</p>
+                            <div class="inputCantidadContainer">
+                                <label for="cantidad11">Cantidad</label>
+                                <input type="number" class="form-control my-2" id="cantidad11" value="1" min="1">
+                            </div>
                             <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
                         </div>
                     </div>
@@ -182,22 +226,48 @@
               </div>
         </div>
         <!-- Subtotal e importe final de la compra-->
-        <div class="container my-4 p-4 rounded resumenCompra">
+        <div class="container my-4 p-3 rounded resumenCompra">
             <h3>Resumen de la compra</h3>
-            <p>*Aca iría una tabla con el precio y cantidad de cada producto*</p>
-            <p>Subtotal: 100000</p>
-            <p>Costo de envío: 500</p>
-            <p>Total: 100500</p>
+            <ul class="list-unstyled productosResumen my-3">
+                <li class="media">
+                    <img class="mr-3 fotoCarrito" src="media/productos/procesadores/intel-i3-10th.jpg">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Intel i3 10100</h5>
+                    </div>
+                    <span>$10000</span>
+                </li>
+                <li class="media my-4">
+                    <img class="mr-3 fotoCarrito" src="media/productos/procesadores/ryzen-5.jpg">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">AMD Ryzen 5 3600</h5>
+                    </div>
+                    <span>$16000</span>
+                </li>
+                <li class="media">
+                    <img class="mr-3 fotoCarrito" src="media/productos/mobos/amd-x570.png">
+                    <div class="media-body">
+                        <h5 class="mt-0 mb-1">Msi x570</h5>
+                    </div>
+                    <span>$25000</span>
+                </li>
+            </ul>
+            <div class="separador"></div>
+            <p>Subtotal: $100000</p>
+            <p>Costo de envío: $500</p>
+            <p>Total: $100500</p>
         </div>
     </main>
-    <footer class="container-fluid p-0">
-        <h5>Este es mi footer</h5>
-        <h6>Copyright 2021 Facundo Jimenez</h6>
+    <footer class="container-fluid p-0  d-flex flex-column justify-content-around align-items-center">
+            <h5>Mis redes</h5>
+            <div class="container-fluid d-flex flex-row justify-content-center">
+                <a class="logoRedSocial" target="_blank" href="https://github.com/Facundojimenez"><img src="media/redes/github.svg" alt="github"></a>
+                <a class="logoRedSocial" target="_blank" href="https://www.linkedin.com/in/facundo-jimenez-980a831ba/"><img src="media/redes/linkedin.svg" alt="linkedin"></a>
+            </div>
+            <h6>Copyright 2021 Facundo Jimenez</h6>
     </footer>
+    <!-- Js  mio-->
+    <script src="js/script.js"></script>
 </body>
-<!-- Js  mio-->
-<script src="js/script.js"></script>
-<!-- Js de bootstrap-->
 
 
 </html>
