desafio clase 8. DOM

--- a/index.html
+++ b/index.html
@@ -57,177 +57,11 @@
         </div>
         <!-- Cartas con productos-->
         <div class="container my-3">
-            <div id="listadoProductos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-                <div class="col mb-4">
-                    <div class="card h-100 intel producto">
-                        <img src="media/productos/procesadores/intel-i3-10th.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$14999</h5>
-                            <h5 class="card-title">Intel i3 10100</h5>
-                            <p class="card-text">Microprocesador de 4 núcleo y 8 hilos</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad1">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad1" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 intel producto">
-                        <img src="media/productos/procesadores/intel-i5-10th.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$22999</h5>
-                            <h5 class="card-title">Intel i3 10400</h5>
-                            <p class="card-text">Microprocesador de 6 núcleo y 12 hilos</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad2">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad2" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 amd">
-                        <img src="media/productos/procesadores/ryzen-5.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$31999</h5>
-                            <h5 class="card-title">AMD Ryzen 5 3600</h5>
-                            <p class="card-text">Microprocesador de 6 núcleos y 12 hilos</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad3">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad3" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 amd">
-                        <img src="media/productos/procesadores/ryzen-7.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$43999</h5>
-                            <h5 class="card-title">AMD Ryzen 5 3700x</h5>
-                            <p class="card-text">Microprocesador de 8 núcleos y 16 hilos</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad4">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad4" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 amd">
-                        <img src="media/productos/mobos/amd-a320.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$8499</h5>
-                            <h5 class="card-title">Msi A320m</h5>
-                            <p class="card-text">Motherboard compatible con los procesadores de AMD de 1era, 2da y 3ra generación</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad5">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad5" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 amd">
-                        <img src="media/productos/mobos/amd-x570.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$25399</h5>
-                            <h5 class="card-title">Msi x570</h5>
-                            <p class="card-text">Motherboard compatible con los procesadores de AMD de 2da, 3ra y 4ta generación</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad6">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad6" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 intel">
-                        <img src="media/productos/mobos/intel-h410.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$7999</h5>
-                            <h5 class="card-title">Asus H410m-e</h5>
-                            <p class="card-text">Motherboard compatible con los procesadores de Intel de 10va y 11va generación</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad7">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad7" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 intel">
-                        <img src="media/productos/mobos/intel-b460.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$14999</h5>
-                            <h5 class="card-title">Gigabyte b460m</h5>
-                            <p class="card-text">Motherboard compatible con los procesadores de Intel de 10va y 11va generación</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad8">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad8" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 ambasMarcas">
-                        <img src="media/productos/gpus/rtx-2060.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$39999</h5>
-                            <h5 class="card-title">Gigabyte RTX 2060</h5>
-                            <p class="card-text">Placa de video con 6GB de VRAM GDDR6</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad9">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad9" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 ambasMarcas">
-                        <img src="media/productos/gpus/rtx-3080.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$125999</h5>
-                            <h5 class="card-title">Asus RTX 3080</h5>
-                            <p class="card-text">Placa de video con 12GB de VRAM GDDR6X</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad10">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad10" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col mb-4">
-                    <div class="card h-100 ambasMarcas">
-                        <img src="media/productos/gpus/rx-5700-xt.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="precio">$99999</h5>
-                            <h5 class="card-title">Gigabyte RX5700 XT</h5>
-                            <p class="card-text">Placa de video con 8GB de VRAM GDDR6</p>
-                            <div class="inputCantidadContainer">
-                                <label for="cantidad11">Cantidad</label>
-                                <input type="number" class="form-control my-2" id="cantidad11" value="1" min="1">
-                            </div>
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Agregar al carrito</button>
-                        </div>
-                    </div>
-                </div>
-              </div>
+            <div id="listadoProductos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3"></div> 
         </div>
         <!-- Subtotal e importe final de la compra-->
         <div class="container my-4 p-3 rounded resumenCompra">
-            <h3>Resumen de la compra</h3>
+            <h3>Resumen de la compra</h3> <!-- Todavia pendiente de implementar con JS-->
             <ul class="list-unstyled productosResumen my-3">
                 <li class="media">
                     <img class="mr-3 fotoCarrito" src="media/productos/procesadores/intel-i3-10th.jpg">
