quitar del carrito y mejoras visuales

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -55,55 +55,31 @@
         <div class="container d-flex">
             <h1 class="mx-auto">Nuestros productos</h1>
         </div>
-        <!-- Cartas con productos-->
+        <!--Listado de cartas con productos-->
         <div class="container my-3">
             <div id="listadoProductos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3"></div> 
         </div>
-        <!-- Subtotal e importe final de la compra-->
-
-        
         <!-- nueva implementacion del carrito -->
         <div class="container resumenCompraContainer my-3 p-3">
-            <h3>Este es el resumen de tu compra</h3>
-            <div class="row p-3">
+            <h3>Resumen de tu compra</h3>
+            <div class="row">
                 <ul class="list-unstyled col-12 col-md-8 col-lg-9" id="listadoCarrito">
                     <h5>Todavia no agregaste productos a tu carrito</h5>
-                    <!-- <li class="media productoCarrito row my-2">
-                        <img class="mr-3 col-3 col-md-3" src="media/productos/procesadores/intel-i3-10th.jpg">
-                        <div class="media-body col-6 col-md-7">
-                            <h5 class="mt-0 mb-1">Intel i3 10100</h5>
-                            <h6>x3 unidades</h6>
-                        </div>
-                        <div class="col-3 col-md-2">
-                            <h6 class="my-1">$10000</h6>
-                            <button class="btn btn-sm btn-danger" type="submit">Quitar</button>
-                        </div>
-                    </li>
-                    <li class="media productoCarrito row my-2">
-                        <img class="mr-3 col-3 col-md-3" src="media/productos/procesadores/intel-i3-10th.jpg">
-                        <div class="media-body col-6 col-md-7">
-                            <h5 class="mt-0 mb-1">Intel i3 10100</h5>
-                            <h6>x3 unidades</h6>
-                        </div>
-                        <div class="col-3 col-md-2">
-                            <h6 class="my-1">$10000</h6>
-                            <button class="btn btn-sm btn-danger" type="submit">Quitar</button>
-                        </div>
-                    </li> -->
                 </ul>
+                <!-- Subtotal e importe final de la compra-->
                 <div class="resumenDetalles col">
                     <h4>Detalles: </h4>
-                    <div class="row no-gutters my-1">
-                        <span class="col-9">Subtotal: </span>
-                        <span class="col text-right font-weight-bold">$0</span>
+                    <div class="row no-gutters my-2">
+                        <span class="col-6">Subtotal: </span>
+                        <span class="col text-right">$0</span>
                     </div>
-                    <div class="row no-gutters my-1">
-                        <span class="col-9">IVA: </span>
-                        <span class="col text-right font-weight-bold">$0</span>
+                    <div class="row no-gutters my-2">
+                        <span class="col-6">IVA: </span>
+                        <span class="col text-right">$0</span>
                     </div>
-                    <div class="row no-gutters my-1">
-                        <span class="col-9">Total: </span>
-                        <span class="col text-right font-weight-bold">$0</span>
+                    <div class="row no-gutters my-2">
+                        <span class="col-6">Total: </span>
+                        <span class="col text-right">$0</span>
                     </div>
                     <button type="button" class="btn btn-primary btn-lg btn-block">Confirmar pedido</button>
                 </div>
@@ -113,8 +89,8 @@
     <footer class="container-fluid p-0  d-flex flex-column justify-content-around align-items-center">
             <h5>Mis redes</h5>
             <div class="container-fluid d-flex flex-row justify-content-center">
-                <a class="logoRedSocial" target="_blank" href="https://github.com/Facundojimenez"><img src="media/redes/github.svg" alt="github"></a>
-                <a class="logoRedSocial" target="_blank" href="https://www.linkedin.com/in/facundo-jimenez-980a831ba/"><img src="media/redes/linkedin.svg" alt="linkedin"></a>
+                <a class="logoRedSocial px-2" target="_blank" href="https://github.com/Facundojimenez"><img src="media/redes/github.svg" alt="github"></a>
+                <a class="logoRedSocial px-2" target="_blank" href="https://www.linkedin.com/in/facundo-jimenez-980a831ba/"><img src="media/redes/linkedin.svg" alt="linkedin"></a>
             </div>
             <h6>Copyright 2021 Facundo Jimenez</h6>
     </footer>
