--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div id="listadoProductos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3"></div> 
         </div>
         <!-- nueva implementacion del carrito -->
-        <div class="container resumenCompraContainer my-3 p-3">
+        <div class="container resumenCompraContainer my-3 p-3 rounded">
             <h3>Resumen de tu compra</h3>
             <div class="row">
                 <ul class="list-unstyled col-12 col-md-8 col-lg-9" id="listadoCarrito">
@@ -81,7 +81,7 @@
                         <span class="col-6">Total: </span>
                         <span class="col text-right">$0</span>
                     </div>
-                    <button type="button" class="btn btn-primary btn-lg btn-block">Confirmar pedido</button>
+                    <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#modalConfirmacionPedido">Confirmar pedido</button>
                 </div>
             </div>
         </div>
@@ -94,6 +94,31 @@
             </div>
             <h6>Copyright 2021 Facundo Jimenez</h6>
     </footer>
+
+    <!-- Modal del botón de Confirmar pedido en el carrito -->
+    <div class="modal fade" id="modalConfirmacionPedido" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">¡Gracias por comprar!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Su pedido <span class="numeroPedido">#123456</span> fue creado exitosamente. Guarde ese número para poder consultar realizar el seguimiento.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Aceptar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+  <!-- Scripts de Boostrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
     <!-- Js  mio-->
     <script src="js/script.js"></script>
 </body>
