guardar carrito en local storage

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
         <div class="container resumenCompraContainer my-4 p-3 rounded">
             <h3>Resumen de tu compra</h3>
             <div class="row">
-                <ul class="list-unstyled col-12 col-md-8 col-lg-9" id="listadoCarrito">
-                    <h5>Todavia no agregaste productos a tu carrito</h5>
-                </ul>
+                <ul class="list-unstyled col-12 col-md-8 col-lg-9" id="listadoCarrito"></ul>
                 <!-- Subtotal e importe final de la compra-->
                 <div class="resumenDetalles col">
                     <h4>Detalles: </h4>
